added new modifications to my envo project

--- a/envo-project/David_kama/styles/index.scss
+++ b/envo-project/David_kama/styles/index.scss
@@ -362,7 +362,7 @@ body {
         .down-img {
           all: unset;
           display: flex;
-          margin-top: 18.4rem;
+          margin-top: -18.7rems
           margin-left: -85.7rem;
 
           .imgs {
